<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imgCurrentPlayer"
        android:layout_width="86dp"
        android:layout_height="84dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/lblCurrentPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_selection_no_player_selected"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/imgCurrentPlayer"
        app:layout_constraintStart_toStartOf="@+id/imgCurrentPlayer"
        app:layout_constraintTop_toBottomOf="@+id/imgCurrentPlayer"
        android:textSize="@dimen/main_textSize_4x"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/imgAddPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="188dp"
        android:src="@drawable/ic_player_add_black_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCurrentPlayer"
        app:tint="@color/playerOption" />

    <TextView
        android:id="@+id/lblEmptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="12dp"
        android:text="@string/player_selection_no_players_yet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAddPlayer"
        android:textColor="@color/playerOption"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstPlayers"
        android:layout_width="391dp"
        android:layout_height="422dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_avatar_player" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/accent"
        android:src="@drawable/ic_player_add_black_24dp"
        android:tint="@color/white"
        app:elevation="@dimen/main_margin_1x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="@dimen/main_margin_1x" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="56dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_player_edition_black_24dp"
        android:drawableTint="@color/white"
        android:visibility="invisible"
        android:text="@string/player_selection_btnEdit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/imgCurrentPlayer"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>